# naikari

./: .gdbinit  .gitignore  .gitmodules  CHANGELOG  Changelog.md  Contributing.md  LICENSE  Makefile.am  Readme.md  code_of_conduct.md  configure.ac  io.github.naikari.Naikari.desktop  io.github.naikari.Naikari.metainfo.xml  io.github.naikari.naikari.metainfo.xml  meson.build  meson.sh  meson_options.txt  naev.appdata.xml  naikari  naikari.6  naikari.appdata.xml  naikari.desktop  naikari.metainfo.xml  on compile  org.naikari.naikari.desktop  org.naikari.naikari.metainfo.xml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: naev_ci.yml  naev_nightly.yml  naev_prerelease.yml  naev_release.yml  naikari_ci.yml  naikari_nightly.yml  naikari_prerelease.yml  naikari_release.yml
dat/: AUTHORS  asteroids.xml  commodity.xml  damagetype.xml  faction.xml  fleet.xml  intro  landing.lua  map.xml  rescue.lua  save_updater.lua  ship_updater.lua  slots.xml  start.xml  tech.xml  trails.xml
dat/ai/: baddie.lua  baddie_norun.lua  civilian.lua  coalition.lua  coalition_norun.lua  collective.lua  collective_norun.lua  drone_miner.lua  dvaered.lua  dvaered_norun.lua  empire.lua  empire_norun.lua  empire_refuel.lua  escort.lua  escort_player.lua  flf.lua  flf_norun.lua  frontier.lua  frontier_police.lua  goddard.lua  guard.lua  independent.lua  mercenary.lua  miner.lua  pirate.lua  pirate_norun.lua  player.lua  proteron.lua  proteron_dissident.lua  racer.lua  sirius.lua  sirius_norun.lua  soromid.lua  stationary.lua  thurion.lua  trader.lua  zalek.lua
dat/assets/: abacus.xml  abandoned_station.xml  adham.xml  adius.xml  adrian.xml  aera.xml  aesir_iv.xml  agino.xml  ahmed.xml  aillis.xml  akios_station.xml  akra_iii.xml  akra_station.xml  akra_v.xml  akrikos.xml  aldarus.xml  aldernael.xml  aldous.xml  aldous_moon.xml  aleph.xml  alexian.xml  allan.xml  alleyway.xml  allous_gg3.xml  allous_i.xml  allous_ii.xml  allous_station.xml  alteris_i.xml  alteris_iv.xml  alteris_v.xml  aluben.xml  amaroq_i.xml  amaroq_iii.xml  amaru.xml  amatiri_i.xml  amatiri_ia.xml  amatiri_ii.xml  ambre.xml  amhurst.xml  amianta.xml  (+1129 more)
dat/bkg/: crimson_gauntlet.lua  default.lua  solarwind.lua
dat/commodities/: diamond.xml  food.xml  gold.xml  industrial_goods.xml  luxury_goods.xml  medicine.xml  ore.xml  water.xml
dat/events/: bioship_upgrade.lua  bounty.lua  discovery.lua  escorts.lua  invincibility.lua  mercenaries.lua  news.lua  pirate_fame.lua  proteron_discovery.lua  shiplog.lua  start.lua
dat/gfx/: ARTWORK_LICENSE.yaml
dat/glsl/: asteroidmarker.frag  colorblind.frag  colorblind.glsl  explosion.frag  factiondisk.frag  font.frag  hilight.frag  hilight_circle.frag  hilight_pos.frag  jump.frag  jumppath.frag  nebula_map.frag  progressbar.frag  stars.frag  stars.vert  sysmarker.frag  targetplanet.frag  targetship.frag
dat/gui/: brushed.lua  legacy.lua  neo.lua  slim.lua  slimv2.lua
dat/missions/: rehab_common.lua
dat/scripts/: cargo_common.lua  escorthelper.lua  fleet.lua  fleethelper.lua  fmt.lua  formation.lua  jumpdist.lua  lmusic.lua  love_shaders.lua  meson.build  misnhelper.lua  numstring.lua  pilotname.lua  playerform.lua  portrait.lua  proximity.lua  selectiveclear.lua  swapship.lua  tablehelper.lua  vn.lua
dat/ships/: admonisher.xml  ancestor.xml  coalition_ancestor.xml  coalition_goddard.xml  coalition_phalanx.xml  coalition_vendetta.xml  coalition_vigilance.xml  diplomatic_vessel.xml  drone.xml  drone_heavy.xml  dvaered_ancestor.xml  dvaered_goddard.xml  dvaered_phalanx.xml  dvaered_vendetta.xml  dvaered_vigilance.xml  elephant.xml  empire_admonisher.xml  empire_hawking.xml  empire_lancelot.xml  empire_pacifier.xml  empire_peacemaker.xml  empire_shark.xml  gawain.xml  goddard.xml  hawking.xml  hyena.xml  hyena_drone.xml  imperial_admonisher.xml  imperial_hawking.xml  imperial_lancelot.xml  imperial_pacifier.xml  imperial_peacemaker.xml  imperial_shark.xml  kestrel.xml  koala.xml  lancelot.xml  llama.xml  mule.xml  pacifier.xml  phalanx.xml  (+53 more)
dat/snd/: music.lua
dat/ssys/: acheron.xml  adraia.xml  adran.xml  aesir.xml  aesria.xml  aet.xml  akodu.xml  akra.xml  allous.xml  alpha_centauri.xml  alpha_pyxidis.xml  alpha_virginis.xml  alteris.xml  amaroq.xml  amatiri.xml  anarbalis.xml  andee.xml  andres.xml  aneel_azi.xml  anger.xml  anku.xml  anrique.xml  apez.xml  apik.xml  arandon.xml  arcanis.xml  arcturus.xml  ariadus.xml  armorhead.xml  ash.xml  astana.xml  atlantis.xml  auger.xml  awowa.xml  babylon.xml  baf.xml  basel.xml  bastion.xml  bedimann.xml  beeklo.xml  (+352 more)
dat/unidiff/: Thurion_found.xml  empire_vs_dvaered.xml  flf_pirate_ally.xml  hakoi_pirates.xml  hypergate_dvaered.xml  hypergate_empire.xml  hypergate_frontier.xml  hypergate_proteron.xml  hypergate_sirius.xml  hypergate_soromid.xml  hypergate_zalek.xml  pyxidis_pirates.xml
docs/: meson.build
docs/c/: Doxyfile.in
docs/lua/: c2luadoc.sh  config.ld  ldoc.css  ldoc.ltp
docs/missions/: mission_template.lua
extras/: resource.rc
extras/macos/: Info.plist.in  bundle.py  bundle.sh  codesign.sh  createDMG.sh  naikari.icns  packageMACOS.sh
extras/rpm/: README  naev.spec  naikari.spec
extras/windows/: bundle.sh  createNSIS.sh  naikari.exe.manifest.in  (+2 more)
po/: POTFILES.in  POTFILES_COMBINED.in  POTFILES_XML.in  cs.po  de.po  fr.po  ja.po  ko.po  meson.build  naikari.pot
src/: Doxyfile  Makefile.am  ai.c  ai.h  array.c  array.h  attributes.h  background.c  background.h  board.c  board.h  camera.c  claim.c  colour.c  colour.h  colours_c_gen.py  comm.c  comm.h  commodity.c  commodity.h  cond.c  conf.c  conf.h  console.c  credits.c  credits.h  damagetype.c  damagetype.h  debug.c  debug.h  dev_mapedit.c  dev_outfit.c  dev_planet.c  dev_ship.c  dev_sysedit.c  dev_sysedit.h  dev_system.c  dev_uniedit.c  dev_uniedit.h  dialogue.c  (+179 more)
subprojects/: luajit.wrap  physfs.wrap
test/: meson.build
utils/: bio_template.py  buildAppImage.sh  check_outfit_store_gfx.py  manuallyTriggerWorkflow.sh  mission_map.py  release.sh  soundtrack.py  update-po.sh
(+1379 files in other folders)
