option('nightly', type: 'boolean', value: false, description: 'Label this version as a nightly build.')
option('paranoid', type: 'boolean', value: false, description: 'Promote run-time warnings to errors.')
option('debug_arrays', type: 'boolean', value: false, description: 'Promote run-time warnings to errors.')
option('dmg', type: 'boolean', value: true, description: 'For macOS: package as a DMG as well as an app bundle. Requires "genisoimage".')
option('executable', type: 'feature', value: 'enabled', description: 'Enable compilation of Naikari\'s executable.')
option('docs_c', type: 'feature', value: 'auto', description: 'Enable compilation of Naikari\'s C documentation.')
option('docs_lua', type: 'feature', value: 'auto', description: 'Enable compilation of Naikari\'s Lua documentation.')
option('luajit', type: 'feature', value: 'auto', description: 'Enable LuaJIT rather than standard Lua.')
option('ndata_path', type: 'string' , value: '', description: 'Set the path ndata will be installed to (relative to the install prefix).')
